parameter without a value

--- a/pipelines/template-parameters-strong.yml
+++ b/pipelines/template-parameters-strong.yml
@@ -5,14 +5,14 @@ parameters:
   - name: parameter_with_defualt_value
     type: string
     default: 'parameter_with_defualt_value default value'
+  - name: parameter_without_default_value
+    type: string
   # - name: parameter_with_template_expression_in_default # A template expression is not allowed in this context
   #   type: string
   #   default: ${{ parameters.parameter1 }}
   # - name: parameter_with_template_expression_in_default # A template expression is not allowed in this context
   #   type: string
   #   default: ${{ variables.undefined_variable }} # A template expression is not allowed in this context
-  # - name: parameter_without_default_value # A value for the 'parameter_without_default_value' parameter must be provided.
-  #   type: string
 
 steps:
   - pwsh: |
