--- a/pipelines/template-parameters-unknown-parameter-invalid.yml
+++ b/pipelines/template-parameters-unknown-parameter-invalid.yml
@@ -6,4 +6,5 @@ steps:
   - template: template-parameters-strong.yml
     parameters:
       parameter1: 'value of parameter1'
+      parameter_without_default_value: 'an explicit value for a parameter without a default value'
       parameter_not_defined_in_template: 'value of parameter not defined in template'
