--- a/pipelines/macros-repository.yml
+++ b/pipelines/macros-repository.yml
@@ -8,7 +8,7 @@ resources:
       type: github
       endpoint: JakubLinhart
       name: JakubLinhart/AzureDevOpsBattlefield
-      ref: 701b91c2ba87176e44379d139ac5c4fcdbd818f5
+      ref: $(dynamicBranch)
 
 steps:
   - checkout: dynamic-repository
