job level variable for a repository

--- a/pipelines/macros-repository.yml
+++ b/pipelines/macros-repository.yml
@@ -8,9 +8,14 @@ resources:
       type: github
       endpoint: JakubLinhart
       name: JakubLinhart/AzureDevOpsBattlefield
-      ref: $(dynamicBranch)
+      ref: $(var_defined_at_job_level)
 
-steps:
-  - checkout: dynamic-repository
+jobs:
+  - job: job1
+    variables:
+      - name: var_defined_at_job_level
+        value: dynamicBranch
+    steps:
+      - checkout: dynamic-repository
 
-  - pwsh: git status
+      - pwsh: git status
