--- a/pipelines/template-expressions.yml
+++ b/pipelines/template-expressions.yml
@@ -7,6 +7,9 @@ trigger:
       - pipelines/template-expressions.yml
 
 variables:
+  - name: var_defined_from_another_ui_level_var
+    value: $(var_defined_at_ui_level)
+
   - name: var_using_variable_not_defined_yet
     value: 'this comes from one variable and: "${{ variables.var_for_other_variable }}"'
   - name: var_for_other_variable
@@ -48,6 +51,10 @@ stages:
               Write-Output ''
               Write-Output 'Template expressions are evaluated before UI variables are defined, so it is not possible to use them in template expressions.'
               Write-Output '    variables.var_defined_at_ui_level: ${{ variables.var_defined_at_ui_level }}'
+
+              Write-Output ''
+              Write-Output 'Workaround for the limitation above is to define a new variable at pipeline level using value of variable defined at UI level.'
+              Write-Output '    variables.var_defined_from_another_ui_level_var: ${{ variables.var_defined_from_another_ui_level_var }}'
 
               Write-Output ''
               Write-Output 'Undefined variables in template expression is evaluated to an empty string.'
