--- a/pipelines/repository-invalid-branch-invalid.yml
+++ b/pipelines/repository-invalid-branch-invalid.yml
@@ -12,7 +12,7 @@ resources:
       type: github
       endpoint: JakubLinhart
       name: JakubLinhart/AzureDevOpsBattlefield
-      ref: refs/heads/thisBranchIsntThere
+      ref: %^$^#$%^
 
 jobs:
   - job: job1
