Revert "test: invalid characters for ref"
This reverts commit 2cfa8d6a30e10adca2bb7bed27423b6467889f48.

--- a/pipelines/repository-invalid-branch-invalid.yml
+++ b/pipelines/repository-invalid-branch-invalid.yml
@@ -12,7 +12,7 @@ resources:
       type: github
       endpoint: JakubLinhart
       name: JakubLinhart/AzureDevOpsBattlefield
-      ref: %^$^#$%^
+      ref: refs/heads/thisBranchIsntThere
 
 jobs:
   - job: job1
