--- a/pipelines/pipeline-parameters.yml
+++ b/pipelines/pipeline-parameters.yml
@@ -17,7 +17,7 @@ parameters:
 
 variables:
   - name: variableForParameter1
-    value: $[[ parameters.parameter1 ]]
+    value: $[ parameters.parameter1 ]
 
 steps:
   - checkout: none
