--- a/pipelines/pipeline-parameters.yml
+++ b/pipelines/pipeline-parameters.yml
@@ -15,6 +15,10 @@ parameters:
       - value2
       - value3
 
+variables:
+  - name: variableForParameter1
+    value: ${{ parameters.parameter1 }}
+
 steps:
   - checkout: none
 
@@ -22,4 +26,5 @@ steps:
       Write-Output 'template expression: ${{ parameters.parameter1 }}''
       Write-Output 'template expression with undefined pipeline parameter: ''${{ parameters.undefinedPipelineParameter }}'''
       Write-Output 'macro: $(parameter1)'
+      Write-Output 'macro with variable value defined by pipeline parameter: $(variableForParameter1)'
     displayName: 'Parameter: ${{ parameters.parameter1 }}'
