--- a/pipelines/template-parameters-strong.yml
+++ b/pipelines/template-parameters-strong.yml
@@ -2,9 +2,9 @@ parameters:
   - name: parameter1
     type: string
     default: 'parameter1 default value'
-  - name: parameter_with_defualt_value
+  - name: parameter_with_default_value
     type: string
-    default: 'parameter_with_defualt_value default value'
+    default: 'parameter_with_default_value default value'
   - name: parameter_without_default_value
     type: string
 
@@ -13,8 +13,10 @@ steps:
       Write-Output 'Parameter value specified as template argument.'
       Write-Output '    parameters.parameter1: ''${{ parameters.parameter1 }}'''
 
+      Write-Output '    parameters.undefinedParameter: ''${{ parameters.undefinedParameter }}'''
+
       Write-Output ''
       Write-Output 'Unspecified parameter, default value is used.'
-      Write-Output '    parameters.parameter_with_defualt_value: ''${{ parameters.parameter_with_defualt_value }}'''
+      Write-Output '    parameters.parameter_with_default_value: ''${{ parameters.parameter_with_default_value }}'''
 
     displayName: 'Check strongly typed parameters'
