--- a/pipelines/pipeline-parameters.yml
+++ b/pipelines/pipeline-parameters.yml
@@ -7,13 +7,7 @@ trigger:
       - pipelines/pipeline-parameters.yml
 
 parameters:
-  - name: parameter1
-    type: string
-    default: value1
-    values:
-      - value1
-      - value2
-      - value3
+  parameter1: value1
 
 variables:
   - name: variableForParameter1
@@ -24,7 +18,6 @@ steps:
 
   - pwsh: | 
       Write-Output 'template expression: ${{ parameters.parameter1 }}''
-      Write-Output 'template expression with undefined pipeline parameter: ''${{ parameters.undefinedPipelineParameter }}'''
       Write-Output 'macro: $(parameter1)'
       Write-Output 'macro with variable value defined by pipeline parameter: $(variableForParameter1)'
     displayName: 'Parameter: ${{ parameters.parameter1 }}'
