--- a/pipelines/template-parameters-strong-invalid-default-invalid.yml
+++ b/pipelines/template-parameters-strong-invalid-default-invalid.yml
@@ -6,5 +6,9 @@ trigger:
     include:
       - pipelines/template-parameters-strong-invalid-default*.yml
 
+variables:
+  - name: some_variable
+    value: true
+
 steps:
   - template: template-parameters-strong-invalid-default-template-invalid.yml
