--- a/pipelines/template-parameters-strong-invalid-default-template-invalid.yml
+++ b/pipelines/template-parameters-strong-invalid-default-template-invalid.yml
@@ -1,7 +1,9 @@
 parameters:
   - name: parameter_with_invalid_default
     type: boolean
-    default: invalid boolean value
+    default: ${{ variables.some_variable }}
 
 steps:
   - checkout: none
+
+  - pwsh: echo ${{ parameters.parameter_with_invalid_default }}
