--- a/pipelines/template-parameters-strong-invalid-default-template-invalid.yml
+++ b/pipelines/template-parameters-strong-invalid-default-template-invalid.yml
@@ -1,7 +1,7 @@
 parameters:
   - name: parameter_with_invalid_default
     type: boolean
-    default: $(some_variable)
+    default: invalid boolean value
 
 steps:
   - checkout: none
