--- a/pipelines/template-expressions.yml
+++ b/pipelines/template-expressions.yml
@@ -87,7 +87,7 @@ stages:
 
           - pwsh: |
               Write-Output ''
-            displayName: Variable group name '${{ variables.var_defined_from_another_variable_group_level_var }}'
+            displayName: 'Variable group name: ${{ variables.var_defined_from_another_variable_group_level_var }}'
 
           - ${{ variables.var_task_name }}: Write-Output 'Hello from a task defined by template expression.'
             displayName: The task name is defined by a template expression
